Stopped legend from overlapping pie chart

--- a/frontend/css/spacelab.css
+++ b/frontend/css/spacelab.css
@@ -84,9 +84,3 @@ g.axis text {
 .y-axis-label {
   font-size: 16px;
 }
-
-svg {
-  display: flex;
-  flex-direction: column;
-}
-
